plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.jnzader'
version = '1.0.0-SNAPSHOT'
description = 'APiGen CodeGen - Code generation utilities for entities, services, and controllers'

// Centralized versions - Updated January 2026
ext {
    jsqlparserVersion = '5.3'      // Latest: supports JDK 17+
    lombokVersion = '1.18.42'      // Latest: supports Java 25
    swaggerParserVersion = '2.1.30'  // OpenAPI/Swagger parser
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    // SQL Parser for code generation from SQL schema
    api "com.github.jsqlparser:jsqlparser:${jsqlparserVersion}"

    // OpenAPI/Swagger Parser for code generation from OpenAPI specs
    api "io.swagger.parser.v3:swagger-parser:${swaggerParserVersion}"

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.17'
    runtimeOnly 'ch.qos.logback:logback-classic:1.5.25'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Testing
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.27.3'
    testImplementation 'org.mockito:mockito-core:5.21.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

test {
    useJUnitPlatform()
}

// JaCoCo configuration - exclude classes that are not fully implemented yet
jacoco {
    toolVersion = "0.8.14"
}

def jacocoExcludes = [
    '**/SqlToApiGenerator*.class',
    '**/generator/CodeGenerator*.class',
    '**/model/SqlFunction*.class'
]

jacocoTestReport {
    dependsOn test
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoExcludes)
        }))
    }
    violationRules {
        rule {
            limit {
                minimum = 0.50
            }
        }
        rule {
            element = 'CLASS'
            excludes = [
                '*.config.*',
                '*AutoConfiguration',
                '*Properties',
                // Classes not fully implemented
                'com.jnzader.apigen.codegen.SqlToApiGenerator',
                'com.jnzader.apigen.codegen.generator.CodeGenerator',
                'com.jnzader.apigen.codegen.model.SqlFunction'
            ]
            limit {
                minimum = 0.60
            }
        }
    }
}

// Don't fail on javadoc warnings/errors
javadoc {
    options.addStringOption('Xdoclint:none', '-quiet')
    failOnError = false
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'APiGen CodeGen'
                description = project.description
                url = 'https://github.com/jnzader/apigen'

                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }

                developers {
                    developer {
                        id = 'jnzader'
                        name = 'JN Zader'
                    }
                }
            }
        }
    }

    repositories {
        mavenLocal()
    }
}
